<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AllView.CalculatorActivity">

    <EditText
        android:id="@+id/ArgOne"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="30sp"
        android:gravity="center"

        app:layout_constraintBottom_toTopOf="@+id/ArgTwo"
        android:autofillHints="Введите уравение"
        android:hint="@string/EnterArg1"
        android:inputType="number"
        android:ems="10"/>

    <EditText
        android:id="@+id/ArgTwo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="30sp"
        android:gravity="center"

        app:layout_constraintBottom_toTopOf="@+id/Result"
        android:autofillHints="Введите уравение"
        android:hint="@string/EnterArg2"
        android:inputType="number"
        android:ems="10"/>


    <TextView
        android:id="@+id/Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Calculator"
        android:textSize="40sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/Result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Result"
        android:textSize="40sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        />

    <ImageView
        android:id="@+id/Image1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_child_care_24"
        app:layout_constraintTop_toBottomOf="@+id/Name"
        android:contentDescription="@string/Drawable1" />




    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="25dp"
        android:columnCount="4"
        android:layout_marginStart="0dp"
        app:layout_constraintTop_toBottomOf="@id/Image1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside" >





        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button1"
            android:textSize="35sp"/>

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button2"
            android:textSize="35sp"/>
        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button3"
            android:textSize="35sp"/>
        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_add"
            android:textSize="35sp"
            />
        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button4"
            android:textSize="35sp"/>
        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button5"
            android:textSize="35sp"/>
        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button6"
            android:textSize="35sp"/>
        <Button
            android:id="@+id/btn_sbst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_subtraction"
            android:textSize="35sp"/>
        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button7"
            android:textSize="35sp"/>
        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button8"
            android:textSize="35sp"/>
        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button9"
            android:textSize="35sp"/>
        <Button
            android:id="@+id/btn_mpln"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_multiplication"
            android:textSize="35sp"/>
        <Button
            android:id="@+id/btn_comma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_comma"
            android:textSize="35sp"/>
        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button0"
            android:textSize="35sp"/>
        <Button
            android:id="@+id/btn_pnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_pnt"
            android:textSize="35sp"/>
        <Button
            android:id="@+id/btn_dvd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_divide"
            android:textSize="35sp"/>

        <Button
            android:id="@+id/btn_eql"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_equally"
            android:layout_columnSpan="4"
            android:layout_gravity="fill_horizontal"
            android:textSize="35sp"/>



    </GridLayout>



</androidx.constraintlayout.widget.ConstraintLayout>